--- a/src/main.css
+++ b/src/main.css
@@ -6,21 +6,74 @@
     https://github.com/halfzebra/create-elm-app/issues/320
 */
 [data-elm-hot="true"] {
-  height: inherit;
+    height: inherit;
 }
 
 body {
-  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  text-align: center;
-  color: #293c4b;
+    font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    text-align: center;
+    color: #293c4b;
 }
 
 h1 {
-  font-size: 30px;
+    font-size: 30px;
 }
 
 img {
-  margin: 20px 0;
-  max-width: 200px;
+    margin: 20px 0;
+    max-width: 200px;
+}
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.header {
+    background-color: #182863;
+    color: #f1f1f1;
+    font-size: 25px;
+}
+
+.page {
+    height: 100%;
+    overflow-x: hidden;
+    transition: 0.5s;
+    margin-left: 250px;
+}
+
+.sidenav {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    /*z-index: 1;*/
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
+}
+
+.sidenav li {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.95);
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav li text {
+    padding: 0px;
+    margin: 0px;
+}
+
+.sidenav .selected {
+    color: rgba(191, 198, 193, 0.95);
+}
+
+.sidenav li:hover {
+    color: #787878;
 }
