--- a/src/main.css
+++ b/src/main.css
@@ -11,69 +11,68 @@
 
 body {
     font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    text-align: center;
-    color: #293c4b;
+    width: 800px;
+    line-height: 1.3;
+    margin: 40px auto;
+    max-width: 650px;
+    font-size: 16px;
+    color: #222;
+    background-color: #EEEEEE;
+    padding: 0 10px;
 }
 
 h1 {
+    line-height: 1.2;
     font-size: 30px;
-}
-
-img {
-    margin: 20px 0;
-    max-width: 200px;
-}
-
-body {
-    font-family: "Lato", sans-serif;
-}
-
-.header {
-    background-color: #182863;
-    color: #f1f1f1;
-    font-size: 25px;
 }
 
 .page {
     height: 100%;
     overflow-x: hidden;
-    transition: 0.5s;
-    margin-left: 250px;
+    align-self: center;
 }
 
-.sidenav {
-    height: 100%;
-    width: 250px;
-    position: fixed;
+.hr {
+    color: #293c4b;
+    display: inline-block;
+    border-style: inset;
+    border-width: 1px;
+}
+
+.header {
+    height: 3em;
+    width: 100%;
     /*z-index: 1;*/
-    top: 0;
-    left: 0;
-    background-color: rgb(0, 0, 0);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding: 0px 0px 0px 0px;
-    margin: 0px;
+    margin: 10px;
 }
 
-.sidenav li {
+.header li {
     padding: 8px 8px 8px 8px;
     text-decoration: none;
     font-size: 25px;
+    float: left;
+    align-self: center;
     color: rgba(255, 255, 255, 0.95);
     display: block;
     transition: 0.3s;
 }
 
-.sidenav li text {
+.header li a {
+    text-decoration: none;
+    color: black;
     padding: 0px;
     margin: 0px;
 }
 
-.sidenav .selected {
+.header img {
+    padding: 0px;
+    margin: 0px;
+}
+
+.header .selected {
     color: rgba(191, 198, 193, 0.95);
 }
 
-.sidenav li:hover {
+.header li a:hover {
     color: #787878;
 }
