--- a/src/main.css
+++ b/src/main.css
@@ -14,22 +14,20 @@ body {
     width: 800px;
     line-height: 1.3;
     margin: 40px auto;
-    max-width: 650px;
+    max-width: 900px;
     font-size: 16px;
-    color: #222;
-    background-color: #EEEEEE;
+    color: #222222;
+    background-color: #f2f2f2;
     padding: 0 10px;
+    align-content: center;
 }
 
-h1 {
-    line-height: 1.2;
-    font-size: 30px;
-}
 
-.page {
+.page-wrapper {
+    max-width: 700px;
     height: 100%;
-    overflow-x: hidden;
-    align-self: center;
+    /*overflow-x: hidden;*/
+    /*align-self: center;*/
 }
 
 .hr {
@@ -52,16 +50,16 @@ h1 {
     font-size: 25px;
     float: left;
     align-self: center;
-    color: rgba(255, 255, 255, 0.95);
     display: block;
     transition: 0.3s;
 }
 
 .header li a {
     text-decoration: none;
-    color: black;
+    color: #000000;
     padding: 0px;
     margin: 0px;
+    transition: 0.3s;
 }
 
 .header img {
@@ -75,4 +73,9 @@ h1 {
 
 .header li a:hover {
     color: #787878;
+}
+
+ li .essay-link {
+    text-decoration: none;
+     display: block;
 }
