--- a/src/main.css
+++ b/src/main.css
@@ -12,30 +12,27 @@
 body {
     font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
     width: 800px;
-    line-height: 1.3;
+    line-height: 160%;
     margin: 40px auto;
     max-width: 900px;
-    font-size: 16px;
     color: #222222;
-    background-color: #f2f2f2;
+    background-color: #f9f9f9;
     padding: 0 10px;
     align-content: center;
 }
 
-
 .page-wrapper {
     max-width: 700px;
     height: 100%;
-    margin: 50px
-    /*overflow-x: hidden;*/
-    /*align-self: center;*/
+    margin: 50px;
+    font-size: 18px;
 }
 
 .hr {
-    color: #293c4b;
+    color: #3b3b3b;
     display: inline-block;
     border-style: inset;
-    border-width: 1px;
+    border-width: 2px;
 }
 
 .header {
@@ -86,6 +83,8 @@ li .essay-link {
     display: block;
 }
 
+
+
 .review-list-item {
     margin: 3em
 }
@@ -93,7 +92,6 @@ li .essay-link {
 .review-list-item header {
     font-size: 18px;
     color: black;
-    margin: 10px;
 }
 
 .review-list-item header a {
@@ -103,4 +101,8 @@ li .essay-link {
 .review-item-stars {
     margin-right: 10px;
     float: right;
+}
+
+.review-list-item-text {
+    padding: 20px
 }
