--- a/src/main.css
+++ b/src/main.css
@@ -25,7 +25,7 @@ body {
     max-width: 700px;
     height: 100%;
     margin: 50px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .hr {
@@ -50,7 +50,7 @@ body {
 .header li {
     padding: 8px 8px 8px 8px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 22px;
     float: left;
     align-self: center;
     display: block;
@@ -83,6 +83,14 @@ li .essay-link {
     display: block;
 }
 
+.essay-header {
+  padding-bottom: 20px;
+}
+
+.essay-preview {
+    margin-left: 20px
+}
+
 
 
 .review-list-item {
@@ -90,7 +98,6 @@ li .essay-link {
 }
 
 .review-list-item header {
-    font-size: 18px;
     color: black;
 }
 
