--- a/src/main.css
+++ b/src/main.css
@@ -11,10 +11,10 @@
 
 body {
     font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
-    width: 800px;
+    height: 100%;
     line-height: 160%;
     margin: 40px auto;
-    max-width: 900px;
+    max-width: 800px;
     color: #222222;
     background-color: #f9f9f9;
     padding: 0 10px;
@@ -112,4 +112,9 @@ li .essay-link {
 
 .review-list-item-text {
     padding: 20px
+}
+
+.resume-embed {
+    width: 100%;
+    height: 950px;
 }
