--- a/src/main.css
+++ b/src/main.css
@@ -118,3 +118,9 @@ li .essay-link {
     width: 100%;
     height: 950px;
 }
+
+.footnote-content {
+    margin-top: -1.5em;
+    margin-left: 4%;
+}
+
