--- a/src/main.css
+++ b/src/main.css
@@ -132,3 +132,11 @@ ol {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
 }
+
+img {
+    margin: 1.5em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+}
